preflight/tests/ui/fail-invalid-syntax.stderr
error: expected `,`
 --> $DIR/fail-invalid-syntax.rs:6:32
  |
6 | #[avionics_harness(ooooo , eee / 0099 | gee)]
  |                                ^

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-invalid-syntax.rs:1:35
  |
1 | use preflight::{avionics_harness, Avionics, Control, Sensors};
  |                                   ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
